Changes due to change in location and difference between git repo that was here and git repo copied in

--- a/ADO.Net.DataAccessLayerTests/ADO.Net.DataAccessLayer_Tests.csproj
+++ b/ADO.Net.DataAccessLayerTests/ADO.Net.DataAccessLayer_Tests.csproj
@@ -49,8 +49,8 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="Utilities.UnitTest">
-      <HintPath>..\..\Unit Test Utility\bin\Debug\Utilities.UnitTest.dll</HintPath>
+    <Reference Include="Utilities.UnitTest, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\lib\Utilities.UnitTest.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
