Refactored to move the Transaction control to Core as it now has no Sql specific implementation.
Removed redundant SqlConnection property in Connection class.

Altered DataAccess so that it no longer opens or closes connections.

Altered Commands to handle open and close of connections

--- a/ADO.Net.DataAccessLayer/ADO.Net.DataAccessLayer.csproj
+++ b/ADO.Net.DataAccessLayer/ADO.Net.DataAccessLayer.csproj
@@ -87,7 +87,7 @@
     <Compile Include="Interfaces\IConnection.cs" />
     <Compile Include="SqlServer\SqlExtensions.cs" />
     <Compile Include="SqlServer\SqlParameterFactory.cs" />
-    <Compile Include="SqlServer\TransactionControl.cs" />
+    <Compile Include="Core\TransactionControl.cs" />
     <Compile Include="SqlServer\SqlXmlReader.cs" />
   </ItemGroup>
   <ItemGroup>
