Updated the project to provide better code coverage
Added the Coverage folder to allow NDepend to display coverage details

--- a/ADO.Net.DataAccessLayerTests/ADO.Net.DataAccessLayer_Tests.csproj
+++ b/ADO.Net.DataAccessLayerTests/ADO.Net.DataAccessLayer_Tests.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="CommonTestSetup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="When_constructing_commands.cs" />
     <Compile Include="When_constructing_DataAccess.cs" />
     <Compile Include="When_executing_an_reader_command.cs" />
     <Compile Include="When_executing_a_scalar_command.cs" />
