Added tests for most of SqlXmlReader class.
Removed the Tuple as not being used for this version
Altered DataAccess to remove method that was attempt to create func with out parameter

--- a/ADO.Net.DataAccessLayerTests/ADO.Net.DataAccessLayer_Tests.csproj
+++ b/ADO.Net.DataAccessLayerTests/ADO.Net.DataAccessLayer_Tests.csproj
@@ -63,9 +63,11 @@
     <Compile Include="When_constructing_DataAccess.cs" />
     <Compile Include="When_executing_an_reader_command.cs" />
     <Compile Include="When_executing_a_scalar_command.cs" />
+    <Compile Include="When_executing_XmlReader_command.cs" />
     <Compile Include="When_using_SqlDataAccess.cs" />
     <Compile Include="When_creating_Db_Parameters.cs" />
     <Compile Include="When_using_transactions.cs" />
+    <Compile Include="When_using_XmlReader.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="TestScripts\CommonCreateScripts\01_create_tables.sql" />
