Create shell of class to decide the CommandType to use.
Class will query db to retrieve list of tables, views & stored procedures and return correct CommandType if they match

--- a/ADO.Net.DataAccessLayerTests/ADO.Net.DataAccessLayer_Tests.csproj
+++ b/ADO.Net.DataAccessLayerTests/ADO.Net.DataAccessLayer_Tests.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="When_constructing_commands.cs" />
     <Compile Include="When_constructing_DataAccess.cs" />
+    <Compile Include="When_determinng_type_of_command.cs" />
     <Compile Include="When_executing_an_reader_command.cs" />
     <Compile Include="When_executing_a_scalar_command.cs" />
     <Compile Include="When_executing_XmlReader_command.cs" />
