--- a/ADO.Net.DataAccessLayerTests/ADO.Net.DataAccessLayer_Tests.csproj
+++ b/ADO.Net.DataAccessLayerTests/ADO.Net.DataAccessLayer_Tests.csproj
@@ -73,7 +73,8 @@
   <ItemGroup>
     <Content Include="TestScripts\CommonCreateScripts\01_create_tables.sql" />
     <Content Include="TestScripts\CommonCreateScripts\02_create_stored_procedures.sql" />
-    <Content Include="TestScripts\CommonCreateScripts\03_insert_test_data.sql" />
+    <Content Include="TestScripts\CommonCreateScripts\04_insert_test_data.sql" />
+    <Content Include="TestScripts\CommonCreateScripts\03_create_views.sql" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
