Altered test project to have an assembly setup to run db scripts.
Added script to create login and user
Added script to run resetdata sp on test teardown
Renamed scripts so the order was correct

These changes have lead to a lot of tests failing which appears to be related to the SqlCommandTypeDecider

--- a/ADO.Net.DataAccessLayerTests/ADO.Net.DataAccessLayer_Tests.csproj
+++ b/ADO.Net.DataAccessLayerTests/ADO.Net.DataAccessLayer_Tests.csproj
@@ -57,6 +57,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AssemblyTestSetup.cs" />
     <Compile Include="CommonTestSetup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="When_constructing_commands.cs" />
@@ -71,10 +72,12 @@
     <Compile Include="When_using_XmlReader.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="TestScripts\CommonCreateScripts\01_create_tables.sql" />
-    <Content Include="TestScripts\CommonCreateScripts\02_create_stored_procedures.sql" />
-    <Content Include="TestScripts\CommonCreateScripts\04_insert_test_data.sql" />
-    <Content Include="TestScripts\CommonCreateScripts\03_create_views.sql" />
+    <Content Include="TestScripts\CommonCreateScripts\02_create_tables.sql" />
+    <Content Include="TestScripts\CommonCreateScripts\03_create_stored_procedures.sql" />
+    <Content Include="TestScripts\CommonCreateScripts\05_insert_test_data.sql" />
+    <Content Include="TestScripts\CommonCreateScripts\04_create_views.sql" />
+    <Content Include="TestScripts\CommonCreateScripts\01_create_login_and_user.sql" />
+    <Content Include="TestScripts\CommonCreateScripts\06_reset_data.sql" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
