--- a/ADO.Net.DataAccessLayerTests/App.config
+++ b/ADO.Net.DataAccessLayerTests/App.config
@@ -3,5 +3,6 @@
   <connectionStrings>
     <add name="sqlTest" connectionString="Data Source=LocalHost; Initial Catalog=tempdb; Integrated Security=SSPI;"/>
     <add name="MinPermission" connectionString="Data Source=LocalHost; Initial Catalog=tempdb; User Id=MinimumPermission; Password=password"/>
+    <add name="TestSchemaOwnerPermission" connectionString="Data Source=LocalHost; Initial Catalog=tempdb; User Id=TestSchemaOwner; Password=password"/>
   </connectionStrings>
 </configuration>
