Altered the name of the class that handles the determinining of command type Alterd logic for determining if command text is a stored procedure

--- a/ADO.Net.DataAccessLayer/ADO.Net.DataAccessLayer.csproj
+++ b/ADO.Net.DataAccessLayer/ADO.Net.DataAccessLayer.csproj
@@ -84,7 +84,7 @@
     <Compile Include="SqlServer\DataAccess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Interfaces\IConnection.cs" />
-    <Compile Include="SqlServer\SqlCommandTypeDecider.cs" />
+    <Compile Include="SqlServer\SqlCommandType.cs" />
     <Compile Include="SqlServer\SqlExtensions.cs" />
     <Compile Include="SqlServer\SqlParameterFactory.cs" />
     <Compile Include="Core\TransactionControl.cs" />
