--- a/ADO.Net.DataAccessLayerTests/packages.config
+++ b/ADO.Net.DataAccessLayerTests/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="NSubstitute" version="1.1.0.0" />
+  <package id="NUnit" version="2.5.10.11092" />
 </packages>
