Moved DataAccess.cs to Core namespace as this is the class that users should be creating to interact with the assembly.
Tests refactored due to move.

Made the IParameterFactory read/write in preperation for removal from the constructor to give users an easier way to use the class.

--- a/ADO.Net.DataAccessLayer/ADO.Net.DataAccessLayer.csproj
+++ b/ADO.Net.DataAccessLayer/ADO.Net.DataAccessLayer.csproj
@@ -81,7 +81,7 @@
     <Compile Include="Interfaces\ICommands.cs" />
     <Compile Include="SqlServer\Commands.cs" />
     <Compile Include="SqlServer\Connection.cs" />
-    <Compile Include="SqlServer\DataAccess.cs" />
+    <Compile Include="Core\DataAccess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Interfaces\IConnection.cs" />
     <Compile Include="SqlServer\SqlCommandType.cs" />
