Began alteration on the SqlCommandType class to enable it to handle situation where the DAL is being used with multiple db's

--- a/ADO.Net.DataAccessLayerTests/App.config
+++ b/ADO.Net.DataAccessLayerTests/App.config
@@ -4,5 +4,6 @@
     <add name="sqlTest" connectionString="Data Source=LocalHost; Initial Catalog=tempdb; Integrated Security=SSPI;"/>
     <add name="MinPermission" connectionString="Data Source=LocalHost; Initial Catalog=tempdb; User Id=MinimumPermission; Password=password"/>
     <add name="TestSchemaOwnerPermission" connectionString="Data Source=LocalHost; Initial Catalog=tempdb; User Id=TestSchemaOwner; Password=password"/>
+    <add name="AdditionalDb" connectionString="Data Source=LocalHost; Initial Catalog=AdditionalDB; User Id=AdditionalDBUser; Password=password"/>
   </connectionStrings>
 </configuration>
