--- a/ADO.Net.DataAccessLayerTests/ADO.Net.DataAccessLayer.SqlServer.Tests.csproj
+++ b/ADO.Net.DataAccessLayerTests/ADO.Net.DataAccessLayer.SqlServer.Tests.csproj
@@ -68,6 +68,7 @@
     <Compile Include="AssemblyTestSetup.cs" />
     <Compile Include="CommonTestSetup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScriptRunner.cs" />
     <Compile Include="When_constructing_commands.cs" />
     <Compile Include="When_constructing_DataAccess.cs" />
     <Compile Include="When_determinng_type_of_command.cs" />
@@ -90,6 +91,8 @@
     <Content Include="TestScripts\CommonCreateScripts\01_create_login_and_user.sql" />
     <Content Include="TestScripts\CommonCreateScripts\07_reset_data.sql" />
     <Content Include="TestScripts\CommonCreateScripts\05_create_test_schmea_and_objects.sql" />
+    <Content Include="TestScripts\ExtraDB\01_Create_schema.sql" />
+    <Content Include="TestScripts\ExtraDB\02_Drop_database.sql" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -101,6 +104,7 @@
       <Name>ADO.Net.DataAccessLayer</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
