Added new test class to test situation where using multiple db's at same time Altered ExtraDB script to have sp same name as primary and unique sp for testing purposes Altered When_determinng_type_of_command.cs to move secondary db test to new test class

--- a/ADO.Net.DataAccessLayerTests/ADO.Net.DataAccessLayer.SqlServer.Tests.csproj
+++ b/ADO.Net.DataAccessLayerTests/ADO.Net.DataAccessLayer.SqlServer.Tests.csproj
@@ -82,6 +82,7 @@
     <Compile Include="When_creating_Db_Parameters.cs" />
     <Compile Include="When_using_transactions.cs" />
     <Compile Include="When_using_XmlReader.cs" />
+    <Compile Include="When_working_with_multiple_databases.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="TestScripts\CommonCreateScripts\02_create_tables.sql" />
