Update solution Remove Nuget from the sln, utilise the inbuilt VS dependency resolution Tests project updated to .Net framework 4.5.2 and uses localdb rather than needing installed Sql Server Existing DAL project renamed to show it is specific to .Net 3.5

--- a/ADO.Net.DataAccessLayerTests/App.config
+++ b/ADO.Net.DataAccessLayerTests/App.config
@@ -1,9 +1,18 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="sqlTest" connectionString="Data Source=LocalHost; Initial Catalog=tempdb; Integrated Security=SSPI;"/>
-    <add name="MinPermission" connectionString="Data Source=LocalHost; Initial Catalog=tempdb; User Id=MinimumPermission; Password=password"/>
-    <add name="TestSchemaOwnerPermission" connectionString="Data Source=LocalHost; Initial Catalog=tempdb; User Id=TestSchemaOwner; Password=password"/>
-    <add name="AdditionalDb" connectionString="Data Source=LocalHost; Initial Catalog=AdditionalDB; User Id=AdditionalDBUser; Password=password"/>
+    <add name="sqlTest" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=tempdb; Integrated Security=SSPI;" />
+    <add name="MinPermission" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=tempdb; User Id=MinimumPermission; Password=password" />
+    <add name="TestSchemaOwnerPermission" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=tempdb; User Id=TestSchemaOwner; Password=password" />
+    <add name="AdditionalDb" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=AdditionalDB; User Id=AdditionalDBUser; Password=password" />
   </connectionStrings>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" /></startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="nunit.framework" publicKeyToken="96d09a1eb7f44a77" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.6.4.14350" newVersion="2.6.4.14350" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
