--- a/ADO.Net.DataAccessLayerTests/packages.config
+++ b/ADO.Net.DataAccessLayerTests/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NSubstitute" version="1.1.0.0" />
-  <package id="NUnit" version="2.5.10.11092" />
+  <package id="NSubstitute" version="1.9.2.0" targetFramework="net452" />
+  <package id="NUnit" version="2.6.4" targetFramework="net4" />
 </packages>
