--- a/ADO.Net.DataAccessLayer_3.5/ADO.Net.DataAccessLayer_3.5.csproj
+++ b/ADO.Net.DataAccessLayer_3.5/ADO.Net.DataAccessLayer_3.5.csproj
@@ -77,20 +77,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Interfaces\IDataAccess.cs" />
-    <Compile Include="Interfaces\IParameterCreation.cs" />
-    <Compile Include="Interfaces\ITransactionControl.cs" />
-    <Compile Include="Interfaces\ICommands.cs" />
-    <Compile Include="SqlServer\Commands.cs" />
-    <Compile Include="SqlServer\Connection.cs" />
-    <Compile Include="Core\DataAccess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Interfaces\IConnection.cs" />
-    <Compile Include="SqlServer\SqlCommandType.cs" />
-    <Compile Include="SqlServer\SqlExtensions.cs" />
-    <Compile Include="SqlServer\SqlParameterFactory.cs" />
-    <Compile Include="Core\TransactionControl.cs" />
-    <Compile Include="SqlServer\SqlXmlReader.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
@@ -109,6 +96,7 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <Import Project="..\Ado.Net.DataAccessLayer\Ado.Net.DataAccessLayer.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
